[package]
name = "evm-tx-sampler"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.4.2", features = ["full"] }
alloy-chains = "0.1.36"
async-trait = "0.1.83"
envy = "0.4.2"
eyre = "0.6.12"
foundry-block-explorers = "0.8.0"
once_cell= "1.20.2"
reqwest = { version = "0.12.8", features = ["json"] }
rust_decimal = "1.36.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1", features = ["full"] }
toml = "0.8.19"
